# whisper-triton-wrapper

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  download.py  requirements.txt
model_repository/whisper_large/: config.pbtxt
model_repository/whisper_large/1/: model.py  number_tokens.json  triton_python_backend_utils.py
triton-client/: .gitlab-ci.yml  README.md  pyproject.toml  setup.py  update_version.py
triton-client/tests/: constants.py  run_rtf_asr_test.py  run_rtf_tts_test.py
triton-client/tts_client/: __init__.py  asr_client.py  base.py  constants.py  tts_client.py
